# graphicx

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: Cargo.toml
examples/hello-world/: main.rs
examples/screen-clear/: main.rs
framework/: Cargo.toml
framework/src/: dx12.rs  lib.rs
framework/src/dx12/: barrier.rs  command.rs  descriptor.rs  device.rs  dxgi.rs  sync.rs
framework/src/dx12/dxgi/: adapter.rs  factory.rs  swapchain.rs
graphix/: Cargo.toml
graphix-backend/dx12/: Cargo.toml
graphix-backend/dx12/src/: barrier.rs  command.rs  descriptor.rs  device.rs  dxgi.rs  resource.rs  sync.rs
graphix-backend/dx12/src/dxgi/: adapter.rs  factory.rs  swapchain.rs
graphix-gfx/: Cargo.toml
graphix-gfx/src/: backend.rs  hal.rs  lib.rs
graphix-gfx/src/backend/dx12/: adapter.rs  command.rs  device.rs  heap.rs  instance.rs  queue.rs  resource.rs  window.rs
graphix-gfx/src/hal/: adapter.rs  attachment.rs  command.rs  device.rs  format.rs  queue.rs  window.rs
graphix-gfx/src/native/dx12/: Cargo.toml
graphix-gfx/src/native/dx12/src/: barrier.rs  command_allocator.rs  command_list.rs  device.rs  dxgi.rs  heap.rs  lib.rs  queue.rs  resource.rs  sync.rs
graphix/src/: engine.rs  lib.rs  timer.rs
src/: dx12.rs  lib.rs  main.rs  window.rs
src/dx12/: barrier.rs  command.rs  debug.rs  descriptor.rs  device.rs  dxgi.rs  mod.rs  resource.rs  sync.rs
