[package]
name = "graphicx"
version = "0.1.0"
authors = ["Matteo Meli <matteo.meli@gmail.com>"]
edition = "2018"

[dependencies]
winit = "0.18"
winapi = { version = "0.3", features = ["d3d12", "d3d12sdklayers", "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgi1_5", "dxgi1_6", "d3dcommon", "minwindef", "synchapi", "unknwnbase", "winbase", "windef", "winerror", "winnt"] }
wio = "0.2.0"
