[package]
name = "graphix-examples"
version = "0.1.0"
authors = ["Matteo Meli <matteo.meli@gmail.com>"]
workspace = ".."
edition = "2018"

[[bin]]
name = "hello-world"
path = "hello-world/main.rs"

[dependencies]
winit = "0.18"
graphix = { path = "../graphix" }
graphix-gfx = { path = "../graphix-gfx", features = ["dx12"] }
