[package]
name = "graphix-backend-dx12"
version = "0.1.0"
authors = ["Matteo Meli <matteo.meli@gmail.com>"]
workspace = "../.."
edition = "2018"

[dependencies]
graphix = { path = "../../graphix" }
winapi = { version = "0.3", features = ["d3d12", "d3d12sdklayers", "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgi1_5", "dxgi1_6", "dxgidebug", "d3dcommon", "minwindef", "synchapi", "unknwnbase", "winbase", "windef", "winerror", "winnt"] }
wio = "0.2.0"
bitflags = "1.0.4"
log = "0.4.6"

[lib]
name = "graphix_backend_dx12"