[package]
name = "graphix-native-dx12"
version = "0.1.0"
authors = ["Matteo Meli <matteo.meli@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0.4"
log = "0.4.6"

winapi = { version = "0.3", features = ["d3d12", "d3d12sdklayers", "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgi1_5", "dxgi1_6", "dxgidebug", "d3dcommon", "minwindef", "synchapi", "unknwnbase", "winbase", "windef", "winerror", "winnt"] }
wio = { version = "0.2.0" }